feat: Added endpoint for getting images of a space
